// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Snapshots With disabled prop should match snapshot with default Button 1`] = `
<div>
  <button
    class="sc-bdVaJa bfzJHY"
    disabled=""
  >
    Gympass
  </button>
</div>
`;

exports[`<Button /> Snapshots With disabled prop should match snapshot with outline Button 1`] = `
<div>
  <button
    class="sc-bdVaJa bfzJHY sc-bwzfXH hQOJvr"
    disabled=""
  >
    Gympass
  </button>
</div>
`;

exports[`<Button /> Snapshots With disabled prop should match snapshot with text Button 1`] = `
<div>
  <button
    class="sc-bdVaJa bfzJHY sc-htpNat kwwcTu"
    disabled=""
  >
    Gympass
  </button>
</div>
`;

exports[`<Button /> Snapshots With full prop should match snapshot with default Button 1`] = `
<div>
  <button
    class="sc-bdVaJa kiricd"
  >
    Gympass
  </button>
</div>
`;

exports[`<Button /> Snapshots With full prop should match snapshot with outline Button 1`] = `
<div>
  <button
    class="sc-bdVaJa kiricd sc-bwzfXH hQOJvr"
  >
    Gympass
  </button>
</div>
`;

exports[`<Button /> Snapshots With full prop should match snapshot with text Button 1`] = `
<div>
  <button
    class="sc-bdVaJa kiricd sc-htpNat kwwcTu"
  >
    Gympass
  </button>
</div>
`;

exports[`<Button /> Snapshots With inverted prop should match snapshot with default Button 1`] = `
<div>
  <button
    class="sc-bdVaJa fItaTW"
  >
    Gympass
  </button>
</div>
`;

exports[`<Button /> Snapshots With inverted prop should match snapshot with outline Button 1`] = `
<div>
  <button
    class="sc-bdVaJa fItaTW sc-bwzfXH hXQpvH"
  >
    Gympass
  </button>
</div>
`;

exports[`<Button /> Snapshots With inverted prop should match snapshot with text Button 1`] = `
<div>
  <button
    class="sc-bdVaJa fItaTW sc-htpNat kwwcTu"
  >
    Gympass
  </button>
</div>
`;

exports[`<Button /> Snapshots With small prop should match snapshot with default Button 1`] = `
<div>
  <button
    class="sc-bdVaJa itQekA"
  >
    Gympass
  </button>
</div>
`;

exports[`<Button /> Snapshots With small prop should match snapshot with outline Button 1`] = `
<div>
  <button
    class="sc-bdVaJa itQekA sc-bwzfXH hQOJvr"
  >
    Gympass
  </button>
</div>
`;

exports[`<Button /> Snapshots With small prop should match snapshot with text Button 1`] = `
<div>
  <button
    class="sc-bdVaJa itQekA sc-htpNat kwwcTu"
  >
    Gympass
  </button>
</div>
`;

exports[`<Button /> Snapshots Without props should match snapshot with default Button 1`] = `
<div>
  <button
    class="sc-bdVaJa bfzJHY"
  >
    Gympass
  </button>
</div>
`;

exports[`<Button /> Snapshots Without props should match snapshot with outline Button 1`] = `
<div>
  <button
    class="sc-bdVaJa bfzJHY sc-bwzfXH hQOJvr"
  >
    Gympass
  </button>
</div>
`;

exports[`<Button /> Snapshots Without props should match snapshot with text Button 1`] = `
<div>
  <button
    class="sc-bdVaJa bfzJHY sc-htpNat kwwcTu"
  >
    Gympass
  </button>
</div>
`;
